Primeira versao do portfolio

--- a/index.html
+++ b/index.html
@@ -4,5 +4,44 @@
     <meta charset="UTF-8" />
     <title>Portfólio</title>
   </head>
-  <body></body>
+  <body>
+    <h3>Índice:</h3>
+    <ul>
+      <li><a href="#quem-sou-eu">Quem sou eu</a></li>
+      <li><a href="#skills">Minhas skills</a></li>
+    </ul>
+
+    <div id="quem-sou-eu">
+      <img
+        id="foto"
+        src="/resources/matheus.jpg"
+        width="400px"
+        alt="Matheus Santos"
+      />
+      <h2>Matheus Gabriel Silva dos Santos</h2>
+      <p>
+        Sou <strong>brasileiro</strong>, moro em <em>Recife - PE</em>, e tenho
+        21 anos. Descubri a programação em 2012, tentei começar programando em
+        PHP mas não tinha muita noção do que tava fazendo, mas foi na faculdade
+        que eu acabei fascinado pela programação quando eu aprendi <em>C</em>.
+        Atualmente estou fazendo o curso da <strong>Trybe</strong> para me
+        tornar um <strong>Web Developer</strong> capacitado. até lá ainda tem
+        muita codagem pelo frente!
+      </p>
+    </div>
+
+    <div id="skills">
+      <h3>Minhas Skills:</h3>
+      <ul>
+        <li>Linux terminal / Shell script</li>
+        <li>Git / Github</li>
+        <li>C / C++ / C#</li>
+        <li><strong>Java</strong></li>
+        <li>Game Dev</li>
+        <li><strong>Lógica</strong></li>
+      </ul>
+    </div>
+
+    <a href="#foto">- Minha foto -</a>
+  </body>
 </html>
