--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         tornar um <strong>Web Developer</strong> capacitado. até lá ainda tem
         muita codagem pelo frente!
       </p>
-      <a href="https://www.linkedin.com/in/matheusg18/">Linkedin</a>
-      <a href="https://github.com/matheusg18">GitHub</a>
+      <a href="https://www.linkedin.com/in/matheusg18/" target="_blank">Linkedin</a>
+      <a href="https://github.com/matheusg18" target="_blank">GitHub</a>
     </div>
 
     <div id="skills">
