--- a/index.html
+++ b/index.html
@@ -3,6 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <title>Portfólio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-size: 16px;
+        font-family: "Roboto", sans-serif;
+        font-weight: 300;
+        color: #a8dadc;
+        background-color: #1d3557;
+      }
+
+      strong {
+        font-weight: 500;
+      }
+
+      em {
+        font-weight: 400;
+      }
+
+      a {
+        text-decoration: none;
+        font-weight: 500;
+        color: #457b9d;
+      }
+
+      a:hover {
+        font-size: 1.3em;
+      }
+
+      #foto {
+        border-radius: 2%;
+      }
+
+    </style>
   </head>
   <body>
     <h3>Índice:</h3>
@@ -28,7 +66,10 @@
         tornar um <strong>Web Developer</strong> capacitado. até lá ainda tem
         muita codagem pelo frente!
       </p>
-      <a href="https://www.linkedin.com/in/matheusg18/" target="_blank">Linkedin</a>
+      <a href="https://www.linkedin.com/in/matheusg18/" target="_blank"
+        >Linkedin</a
+      >
+      <br />
       <a href="https://github.com/matheusg18" target="_blank">GitHub</a>
     </div>
 
