--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -21,11 +21,23 @@
 
     <div class="banner">
       <div class="banner-item banner-social">
-        <p>Matheus Gabriel Silva dos Santos</p>
-        <a href="https://www.linkedin.com/in/matheusg18/" target="_blank"
-          >Linkedin</a
-        >
-        <a href="https://github.com/matheusg18" target="_blank">GitHub</a>
+        <h2>Matheus Santos</h2>
+
+        <div class="social-network">
+          <a href="https://www.linkedin.com/in/matheusg18/" target="_blank"
+            ><img
+              class="social-network-icon"
+              src="./resources/LI-In-Bug.png"
+              alt="Linkedin"
+          /></a>
+
+          <a href="https://github.com/matheusg18" target="_blank"
+            ><img
+              class="social-network-icon"
+              src="./resources/GitHub-Mark-Light-32px.png"
+              alt="GitHub"
+          /></a>
+        </div>
       </div>
 
       <img
