--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
   </head>
 
   <body>
-    <h3>Índice:</h3>
-    <ul>
-      <li><a href="#quem-sou-eu">Quem sou eu</a></li>
-      <li><a href="#skills">Minhas skills</a></li>
-    </ul>
+    <div class="header">
+      <ul>
+        <li><a href="#inicio">Início</a></li>
+        <li><a href="#quem-sou-eu">Quem sou eu</a></li>
+        <li><a href="#skills">Minhas skills</a></li>
+      </ul>
+    </div>
 
-    <div class="banner">
+    <div class="banner" id="inicio">
       <div class="banner-item banner-social">
         <h2>Matheus Santos</h2>
 
