--- a/index.html
+++ b/index.html
@@ -50,15 +50,17 @@
       />
     </div>
 
-    <p>
-      Sou <strong>brasileiro</strong>, moro em <em>Recife - PE</em>, e tenho 21
-      anos. Descubri a programação em 2012, tentei começar programando em PHP
-      mas não tinha muita noção do que tava fazendo, mas foi na faculdade que eu
-      acabei fascinado pela programação quando eu aprendi <em>C</em>. Atualmente
-      estou fazendo o curso da <strong>Trybe</strong> para me tornar um
-      <strong>Web Developer</strong> capacitado. até lá ainda tem muita codagem
-      pelo frente!
-    </p>
+    <div id="quem-sou-eu">
+      <p>
+        Sou <strong>brasileiro</strong>, moro em <em>Recife - PE</em>, e tenho
+        21 anos. Descubri a programação em 2012, tentei começar programando em
+        PHP mas não tinha muita noção do que estava fazendo. Foi na faculdade
+        que eu acabei fascinado pela programação quando eu aprendi <em>C</em>.
+        Atualmente estou fazendo o curso da <strong>Trybe</strong> para me
+        tornar um <strong>Web Developer</strong> capacitado. Até lá ainda tem
+        muita codagem pelo frente!
+      </p>
+    </div>
 
     <div id="skills">
       <h3>Minhas Skills:</h3>
@@ -71,7 +73,5 @@
         <li><strong>Lógica</strong></li>
       </ul>
     </div>
-
-    <a href="#foto">- Minha foto -</a>
   </body>
 </html>
