Minhas skills estilizado

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
       </p>
     </div>
 
-    <div id="skills">
+    <div id="minhas-skills">
       <h3>Minhas Skills:</h3>
       <ul>
         <li>Linux terminal / Shell script</li>
         <li>Git / Github</li>
         <li>C / C++ / C#</li>
-        <li><strong>Java</strong></li>
+        <li>Java</li>
         <li>Game Dev</li>
-        <li><strong>Lógica</strong></li>
+        <li>Lógica</li>
       </ul>
     </div>
   </body>
