--- a/projects/calculator/index.html
+++ b/projects/calculator/index.html
@@ -11,8 +11,45 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col m-1 border mt-5" id="calculator-screen"></div>
+      </div>
+      <div class="row text-center">
+        <div class="col m-1 border" id="left-bracket">(</div>
+        <div class="col m-1 border" id="right-bracket">)</div>
+        <div class="col m-1 border" id="percent">%</div>
+        <div class="col m-1 border" id="ac">AC</div>
+      </div>
+      <div class="row text-center">
+        <div class="col m-1 border" id="seven">7</div>
+        <div class="col m-1 border" id="eight">8</div>
+        <div class="col m-1 border" id="nine">9</div>
+        <div class="col m-1 border" id="divide">/</div>
+      </div>
+      <div class="row text-center">
+        <div class="col m-1 border" id="four">4</div>
+        <div class="col m-1 border" id="five">5</div>
+        <div class="col m-1 border" id="six">6</div>
+        <div class="col m-1 border" id="multiply">*</div>
+      </div>
+      <div class="row text-center">
+        <div class="col m-1 border" id="one">1</div>
+        <div class="col m-1 border" id="two">2</div>
+        <div class="col m-1 border" id="three">3</div>
+        <div class="col m-1 border" id="subtract">-</div>
+      </div>
+      <div class="row text-center">
+        <div class="col m-1 border" id="zero">0</div>
+        <div class="col m-1 border" id="dot">.</div>
+        <div class="col m-1 border" id="equal">=</div>
+        <div class="col m-1 border" id="add">+</div>
+      </div>
+    </div>
+
     <script src="./script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
