Calculator -> Removi os ids dos numeros e coloquei a class numeros no lugar, e criei o script inicial que digita os numeros com o clique

--- a/projects/calculator/index.html
+++ b/projects/calculator/index.html
@@ -25,25 +25,25 @@
         <div class="col m-1 border" id="ac">AC</div>
       </div>
       <div class="row text-center">
-        <div class="col m-1 border" id="seven">7</div>
-        <div class="col m-1 border" id="eight">8</div>
-        <div class="col m-1 border" id="nine">9</div>
+        <div class="numbers col m-1 border">7</div>
+        <div class="numbers col m-1 border">8</div>
+        <div class="numbers col m-1 border">9</div>
         <div class="col m-1 border" id="divide">/</div>
       </div>
       <div class="row text-center">
-        <div class="col m-1 border" id="four">4</div>
-        <div class="col m-1 border" id="five">5</div>
-        <div class="col m-1 border" id="six">6</div>
+        <div class="numbers col m-1 border">4</div>
+        <div class="numbers col m-1 border">5</div>
+        <div class="numbers col m-1 border">6</div>
         <div class="col m-1 border" id="multiply">*</div>
       </div>
       <div class="row text-center">
-        <div class="col m-1 border" id="one">1</div>
-        <div class="col m-1 border" id="two">2</div>
-        <div class="col m-1 border" id="three">3</div>
+        <div class="numbers col m-1 border">1</div>
+        <div class="numbers col m-1 border">2</div>
+        <div class="numbers col m-1 border">3</div>
         <div class="col m-1 border" id="subtract">-</div>
       </div>
       <div class="row text-center">
-        <div class="col m-1 border" id="zero">0</div>
+        <div class="col m-1 border">0</div>
         <div class="col m-1 border" id="dot">.</div>
         <div class="col m-1 border" id="equal">=</div>
         <div class="col m-1 border" id="add">+</div>
