Calculator -> Mudei alguns estilos: font sizes e o width do container

--- a/projects/calculator/index.html
+++ b/projects/calculator/index.html
@@ -14,35 +14,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container w-50">
       <div class="row">
-        <div class="col m-1 border mt-5" id="calculator-screen"></div>
+        <div class="col m-1 border mt-5 text-end fs-1" id="calculator-screen">
+          123456
+        </div>
       </div>
-      <div class="row text-center">
+      <div class="row text-center fs-3">
         <div class="col m-1 border" id="left-bracket">(</div>
         <div class="col m-1 border" id="right-bracket">)</div>
         <div class="col m-1 border" id="percent">%</div>
         <div class="col m-1 border" id="ac">AC</div>
       </div>
-      <div class="row text-center">
+      <div class="row text-center fs-3">
         <div class="numbers col m-1 border">7</div>
         <div class="numbers col m-1 border">8</div>
         <div class="numbers col m-1 border">9</div>
         <div class="col m-1 border" id="divide">/</div>
       </div>
-      <div class="row text-center">
+      <div class="row text-center fs-3">
         <div class="numbers col m-1 border">4</div>
         <div class="numbers col m-1 border">5</div>
         <div class="numbers col m-1 border">6</div>
         <div class="col m-1 border" id="multiply">*</div>
       </div>
-      <div class="row text-center">
+      <div class="row text-center fs-3">
         <div class="numbers col m-1 border">1</div>
         <div class="numbers col m-1 border">2</div>
         <div class="numbers col m-1 border">3</div>
         <div class="col m-1 border" id="subtract">-</div>
       </div>
-      <div class="row text-center">
+      <div class="row text-center fs-3">
         <div class="col m-1 border">0</div>
         <div class="col m-1 border" id="dot">.</div>
         <div class="col m-1 border" id="equal">=</div>
