--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,16 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/images/code.png" />
+    <meta property="og:url" content="https://matheusg18.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Matheus Santos" />
+    <meta property="og:description" content="Matheus Santos portfólio." />
+    <meta property="og:image" content="%PUBLIC_URL%/images/matheus.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Matheus Santos portfólio." />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%%PUBLIC_URL%/images/code.png" />
     <title>Matheus Santos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
